# CloudMediaPilot

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/adapters/: c115.py  douban.py  pansou.py  prowlarr.py  quark.py  tmdb.py
backend/app/api/: routes.py
backend/app/core/: config.py  deps.py  errors.py
backend/app/schemas/: models.py
backend/app/services/: app_config_service.py  auth_service.py  log_service.py  provider_status_service.py  search_service.py  task_service.py  task_store.py
backend/app/utils/: media.py
backend/app/webui/: index.html
backend/app/webui/assets/: app.css  app.js
backend/tests/: e2e_playwright_smoke.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_adapters_behavior.py  test_search_dedupe.py
config/: .env.example
infra/scripts/: smoke.py  verify_secrets.py
scripts/: dockerhub_publish.sh
